collums fully finished and some other text stuff fixed. also thumbnail text now wraps. rm'd hovertext font size configurable.

--- a/src/App.css
+++ b/src/App.css
@@ -331,3 +331,21 @@
     color: #ffffff;
   }
 }
+
+.darkmodelightmodetext {
+
+}
+
+@media (prefers-color-scheme: dark) {
+  .darkmodelightmodetext{
+    color: #ffffff;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  .darkmodelightmodetext{
+    
+    color: #313131;
+  }
+
+}
